--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       mode: replicated
       replicas: 1
     environment:
-      - DSN="host=postgres port=5432 user=postgres password=password dbname=users sslmode=disable timezone=UTC connect_timeout=5"
+      DSN: "host=postgres port=5432 user=postgres password=password dbname=users sslmode=disable timezone=UTC connect_timeout=5"
 
   postgres:
       image: 'postgres:14.2'
@@ -38,4 +38,4 @@ services:
         POSTGRES_PASSWORD: password
         POSTGRES_DB: users
       volumes:
-        - ./db-data/postgres/:/var/lib/postgresql/data/
+        - ./db-data/postgres/:/var/lib/postgres/data/
