--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 /project/db-data/postgres
 /project/db-data/mongo
+
+auth-service/authApp
+broker-service/brokerApp
+front-end/frontApp
+logger-service/loggerApp
