--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -29,6 +29,7 @@ services:
     restart: always
     ports:
       - "8081:8080"
+    
     deploy:
       mode: replicated
       replicas: 1
@@ -59,3 +60,10 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: password
     volumes:
       - ./db-data/mongo/:/data/db/
+
+
+  mailhog:
+    image: 'mailhog/mailhog:latest'
+    ports:
+      - "1025:1025"
+      - "8025:8025"
